验证码接口

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:l4F9KqFhT11AoMXFOMnR+JuwshyTIvO3uW0iQg3Pq5A=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
+DB_DATABASE=larabbs
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
@@ -45,3 +45,11 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 BAIDU_TRANSLATE_APPID=
 BAIDU_TRANSLATE_KEY=
+
+API_STANDARDS_TREE=prs
+API_SUBTYPE=larabbs
+API_PREFIX=api
+API_VERSION=v1
+API_DEBUG=true
+
+YUNPIAN_API_KEY=92e73470321be8e60d68b0e883c81592
